--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8" />
-    <title>WebStudio - Website</title>
+    <title>WebStudio - Website (test)</title>
 </head> 
 <body>
 <!--Page header-->
