--- a/index.html
+++ b/index.html
@@ -73,48 +73,66 @@
             </ul>
         </section>
 
-        <figure>
+        <section>
+            <h2>Nasz zespół</h2>
             <ul>
-                <h2>Nasz zespół</h2>
                 <li>
-                    <img src="images/img1.jpg" alt="John Doe 1" width="270" height="260" />
-                    <span>John Doe 1</span>
-                    <span>Product Desinger</span>
+                    <figure>
+                        <img src="images/img1.jpg" alt="John Doe 1" width="270" height="260" />
+                    </figure>
+                    <figcaption>
+                        <span>John Doe 1</span>
+                        <span>Product Desinger</span>
+                    </figcaption>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="images/img2.jpg" alt="John Doe 2" width="270" height="260" />
-                    <span>John Doe 2</span>
-                    <span>Frontend Developer</span>
+                    <figure>
+                        <img src="images/img2.jpg" alt="John Doe 2" width="270" height="260" />
+                    </figure>
+                    <figcaption>   
+                        <span>John Doe 2</span>
+                        <span>Frontend Developer</span>
+                    </figcaption>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="images/img3.jpg" alt="John Doe 3" width="270" height="260" />
-                    <span>John Doe 3</span>
-                    <span>Marketing</span>
+                    <figure>
+                        <img src="images/img3.jpg" alt="John Doe 3" width="270" height="260" />
+                    </figure>
+                    <figcaption>
+                        <span>John Doe 3</span>
+                        <span>Marketing</span>
+                    </figcaption>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="images/img4.jpg" alt="John Doe 4" width="270" height="260" />
-                    <span>John Doe 4</span>
-                    <span>UI Designer</span>
+                    <figure>
+                        <img src="images/img4.jpg" alt="John Doe 4" width="270" height="260" />
+                    </figure>
+                    <figcaption>
+                        <span>John Doe 4</span>
+                        <span>UI Designer</span>
+                    </figcaption>
                 </li>
             </ul>
-        </figure>
+        </section>    
     </main>
 
     <!--Page footer-->
     <footer>
         <a href="index.html"><span>Web</span>Studio</a>
-        <address><span>Warszawa, Aleje Jerozolimskie 21</span></address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <address>
+            <span>Warszawa, Aleje Jerozolimskie 21</span>
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="tel:+48111111111">+48 111 111 111</a>
+        </address>
     </footer>
 
 </body>
