--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
             <button>Zamów usługe</button>
         </section>
-
+    
+    <!--Articles section-->
         <section>
             <ul>
                 <li>
@@ -64,6 +65,7 @@
                 </li>
         </section>
 
+    <!--What we do section-->
         <section>
             <h2>Czym się zajmujemy</h2>
             <ul>
@@ -73,6 +75,7 @@
             </ul>
         </section>
 
+    <!--Our team section-->
         <section>
             <h2>Nasz zespół</h2>
             <ul>
